ppo_disc16840571.out
Running script...
  File "/zhome/db/f/128823/rl/RL_sandbox/src/run.py", line 19
    if ar
         ^
SyntaxError: expected ':'
